--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
   username: root
   password:
   host: localhost
-  database: ajax_app_development
+  database: mahjong_score_app_development
 
 test:
   <<: *default
@@ -16,7 +16,7 @@ test:
   username: root
   password:
   host: localhost
-  database: ajax_app_test
+  database: mahjong_score_test
 
 production:
   <<: *default
